prevent accidental refresh on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  overscroll-behavior-x: none;
+  overscroll-behavior: none;
 }
 
 html {
